--- a/src/BulkWriter/Properties/Resources.resx
+++ b/src/BulkWriter/Properties/Resources.resx
@@ -162,4 +162,7 @@
   <data name="EnumerableDataReader_GetBytes_OrdinalDoesNotMapToProperty" xml:space="preserve">
     <value>The ordinal does not map to property</value>
   </data>
+  <data name="EnumerableDataReader_GetString_OrdinalDoesNotMapToProperty" xml:space="preserve">
+    <value>The ordinal does not map to property</value>
+  </data>
 </root>
